--- a/package.json
+++ b/package.json
@@ -9,10 +9,32 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.11",
+    "@types/react-select": "^5.0.1",
+    "@types/styled-components": "^5.1.22",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.5.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "sass": "^1.49.7",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
